# sol_bank

./: Anchor.toml  Cargo.toml  PROGRAM_ID.txt
programs/sol_bank/: Cargo.toml
programs/sol_bank/src/: lib.rs
sol_bank_client/: Cargo.toml  client_config.yaml
sol_bank_client/src/: main.rs
tests/: sol_bank.js
