[package]
name = "sol_bank_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
solana-sdk    = "1.14.14"
serde         = { version = "1.0", features = ["derive"] }
serde_yaml    = "0.9"
anyhow        = "1.0"

# ← add this so `use sol_bank::…` works
sol_bank      = { path = "../programs/sol_bank" }
